--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^6.0"
+        "php": "^7.4|^8.0",
+        "illuminate/support": "^7.0|^8.0",
+        "ext-json": "*"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^5.0|^6.0",
+        "phpunit/phpunit": "^8.4|^9.3",
+        "laravel/framework": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
