--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,13 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.3|^8.0",
         "illuminate/support": "^7.0|^8.0",
         "ext-json": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0",
-        "phpunit/phpunit": "^8.4|^9.3",
-        "laravel/framework": "^7.0|^8.0"
+        "phpunit/phpunit": "^9.1"
     },
     "autoload": {
         "psr-4": {
